# zig_sel4

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  settings.cmake  zig_toolchain.cmake
configs/: qemu-arm-virt_64v.cmake
zig_rootserver/: CMakeLists.txt  build.zig  build.zig.zon
zig_rootserver/src/: io.zig  main.zig  panic.zig  start.S
